--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8>
   <meta name=viewport
     content="width=device-width,initial-scale=0.5,maximum-scale=0.5,minimum-scale=0.5,user-scalable=no">
-  <title>vue1701</title>
+  <title>饿了么仿写</title>
   <link rel="shortcut icon" type="image/x-icon" href="./static/favicon.ico" rel="external nofollow" />
   <script type=text/javascript src=static/jquery-1.11.2.min.js> </script> <script
     src="http://webapi.amap.com/maps?v=1.4.1&key=06fb75f531ce19fd2af711465487d07a&&plugin=AMap.Scale,AMap.OverView,AMap.ToolBar,AMap.Autocomplete,AMap.Marker"></script>
